a few more changes

--- a/docs/notebooks/1-the-basics.ipynb
+++ b/docs/notebooks/1-the-basics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🎨 NeMo Data Designer 101: The Basics\n",
+    "## 🎨 Data Designer 101: The Basics\n",
     "\n",
     "#### 📚 What you'll learn\n",
     "\n",
