--- a/docs/notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🎨 NeMo Data Designer 101: Structured Outputs and Jinja Expressions\n",
+    "# 🎨 Data Designer 101: Structured Outputs and Jinja Expressions\n",
     "\n",
     "#### 📚 What you'll learn\n",
     "\n",
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ⚙️ Initialize the NeMo Data Designer Client\n",
+    "### ⚙️ Initialize the Data Designer interface\n",
     "\n",
     "- `DataDesigner` is the main object that is used to interface with the library.\n"
    ]
