--- a/docs/notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -30,12 +30,12 @@
    "source": [
     "from data_designer.essentials import (\n",
     "    CategorySamplerParams,\n",
+    "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
     "    ExpressionColumnConfig,\n",
     "    InferenceParameters,\n",
     "    LLMStructuredColumnConfig,\n",
     "    ModelConfig,\n",
-    "    DataDesigner,\n",
     "    PersonSamplerParams,\n",
     "    SamplerColumnConfig,\n",
     "    SamplerType,\n",
@@ -166,6 +166,7 @@
    "source": [
     "from decimal import Decimal\n",
     "from typing import Literal\n",
+    "\n",
     "from pydantic import BaseModel, Field\n",
     "\n",
     "\n",
@@ -174,9 +175,7 @@
     "class Product(BaseModel):\n",
     "    name: str = Field(description=\"The name of the product\")\n",
     "    description: str = Field(description=\"A description of the product\")\n",
-    "    price: Decimal = Field(\n",
-    "        description=\"The price of the product\", ge=10, le=1000, decimal_places=2\n",
-    "    )\n",
+    "    price: Decimal = Field(description=\"The price of the product\", ge=10, le=1000, decimal_places=2)\n",
     "\n",
     "\n",
     "class ProductReview(BaseModel):\n",
@@ -437,9 +436,7 @@
     "    SamplerColumnConfig(\n",
     "        name=\"target_age_range\",\n",
     "        sampler_type=SamplerType.CATEGORY,\n",
-    "        params=CategorySamplerParams(\n",
-    "            values=[\"18-25\", \"25-35\", \"35-50\", \"50-65\", \"65+\"]\n",
-    "        ),\n",
+    "        params=CategorySamplerParams(values=[\"18-25\", \"25-35\", \"35-50\", \"50-65\", \"65+\"]),\n",
     "    )\n",
     ")\n",
     "\n",
@@ -644,14 +641,10 @@
     "# We can create new columns using Jinja expressions that reference\n",
     "# existing columns, including attributes of nested objects.\n",
     "config_builder.add_column(\n",
-    "    ExpressionColumnConfig(\n",
-    "        name=\"customer_name\", expr=\"{{ customer.first_name }} {{ customer.last_name }}\"\n",
-    "    )\n",
+    "    ExpressionColumnConfig(name=\"customer_name\", expr=\"{{ customer.first_name }} {{ customer.last_name }}\")\n",
     ")\n",
     "\n",
-    "config_builder.add_column(\n",
-    "    ExpressionColumnConfig(name=\"customer_age\", expr=\"{{ customer.age }}\")\n",
-    ")\n",
+    "config_builder.add_column(ExpressionColumnConfig(name=\"customer_age\", expr=\"{{ customer.age }}\"))\n",
     "\n",
     "config_builder.add_column(\n",
     "    LLMStructuredColumnConfig(\n",
