--- a/docs/notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/notebooks/3-seeding-with-a-dataset.ipynb
@@ -29,10 +29,10 @@
    "outputs": [],
    "source": [
     "from data_designer.essentials import (\n",
+    "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
     "    InferenceParameters,\n",
     "    ModelConfig,\n",
-    "    DataDesigner,\n",
     "    SeedConfig,\n",
     ")"
    ]
@@ -293,8 +293,9 @@
    "source": [
     "# Download sample dataset from Github\n",
     "import urllib.request\n",
-    "url = 'https://raw.githubusercontent.com/NVIDIA/GenerativeAIExamples/refs/heads/main/nemo/NeMo-Data-Designer/data/gretelai_symptom_to_diagnosis.csv'\n",
-    "local_filename, headers = urllib.request.urlretrieve(url, 'gretelai_symptom_to_diagnosis.csv')\n",
+    "\n",
+    "url = \"https://raw.githubusercontent.com/NVIDIA/GenerativeAIExamples/refs/heads/main/nemo/NeMo-Data-Designer/data/gretelai_symptom_to_diagnosis.csv\"\n",
+    "local_filename, headers = urllib.request.urlretrieve(url, \"gretelai_symptom_to_diagnosis.csv\")\n",
     "\n",
     "seed_dataset = SeedConfig(dataset=local_filename)\n",
     "\n",
