forgotten file + overview to tutorial

--- a/docs/notebooks/1-the-basics.ipynb
+++ b/docs/notebooks/1-the-basics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🎨 Data Designer 101: The Basics\n",
+    "# 🎨 Data Designer 101: The Basics\n",
     "\n",
     "#### 📚 What you'll learn\n",
     "\n",
@@ -1947,7 +1947,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
