--- a/docs/notebooks/1-the-basics.ipynb
+++ b/docs/notebooks/1-the-basics.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# 🎨 Data Designer 101: The Basics\n",
     "\n",
+    "[Click here](https://raw.githubusercontent.com/NVIDIA-NeMo/DataDesigner/refs/heads/main/docs/notebooks/1-the-basics.ipynb) to download this notebook to your computer.",
+    "\n",
     "#### 📚 What you'll learn\n",
     "\n",
     "This notebook demonstrates the basics of Data Designer by generating a simple product review dataset.\n"
