--- a/docs/notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# 🎨 Data Designer 101: Structured Outputs and Jinja Expressions\n",
     "\n",
+    "[Click here](https://raw.githubusercontent.com/NVIDIA-NeMo/DataDesigner/refs/heads/main/docs/notebooks/2-structured-outputs-and-jinja-expressions.ipynb) to download this notebook to your computer.",
+    "\n",
     "#### 📚 What you'll learn\n",
     "\n",
     "In this notebook, we will continue our exploration of Data Designer, demonstrating more advanced data generation using structured outputs and Jinja expressions.\n",
