--- a/docs/notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/notebooks/3-seeding-with-a-dataset.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# 🎨 Data Designer 101: Seeding Synthetic Data Generation with an External Dataset\n",
     "\n",
+    "[Click here](https://raw.githubusercontent.com/NVIDIA-NeMo/DataDesigner/refs/heads/main/docs/notebooks/3-seeding-with-a-dataset.ipynb) to download this notebook to your computer.",
+    "\n",
     "#### 📚 What you'll learn\n",
     "\n",
     "In this notebook, we will demonstrate how to seed synthetic data generation in Data Designer with an external dataset.\n",
