fix example notebook drop=False -> drop=True

--- a/docs/notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
     "        name=\"customer\",\n",
     "        sampler_type=SamplerType.PERSON_FROM_FAKER,\n",
     "        params=PersonFromFakerSamplerParams(),\n",
-    "        drop=False,\n",
+    "        drop=True,\n",
     "    )\n",
     ")\n",
     "\n",
