--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer pillow\n"
+    "!pip install -q data-designer pillow"
    ]
   },
   {
@@ -52,10 +52,11 @@
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
+    "import os\n",
+    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "import os\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
    ]
   },
   {
