--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer \n"
+    "!pip install -q data-designer"
    ]
   },
   {
@@ -43,10 +43,11 @@
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
+    "import os\n",
+    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "import os\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
    ]
   },
   {
