--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9da2fbbf",
+   "id": "2ca47def",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53cc83fe",
+   "id": "1c07d4d1",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,32 +25,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ec209f1",
+   "id": "e6fdbaff",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer"
+    "!pip install -q data-designer \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "636b7151",
+   "id": "54f7eb1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
-    "import os\n",
-    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "import os\n",
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8572f99c",
+   "id": "04c89e08",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -61,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b80a6d6",
+   "id": "59f952e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07f86e7",
+   "id": "f5c741e9",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -95,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9b6f8dd",
+   "id": "2dccabca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e264f8b",
+   "id": "b872bf95",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -121,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0982db6a",
+   "id": "8f40a46d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e39ae0f0",
+   "id": "81360ecf",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -168,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "845a2ce6",
+   "id": "992ee1bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c829214",
+   "id": "0dbcf838",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -194,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3afafa39",
+   "id": "bc9c46f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d774fe6b",
+   "id": "bbcbb073",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -212,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb8ff044",
+   "id": "56983af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6851c834",
+   "id": "275351cc",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -302,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4832cab",
+   "id": "6897388a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "205cd3e4",
+   "id": "b00a82d2",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -354,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d140be8a",
+   "id": "8acf067e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "543509ef",
+   "id": "34764875",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -408,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d2a8ed5",
+   "id": "04a01435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dca570cd",
+   "id": "42ca5d3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e816243",
+   "id": "be9316ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b437c0",
+   "id": "ed536176",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -452,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aface55",
+   "id": "c763bc92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82af5b0f",
+   "id": "bfe254fd",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -475,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e856ad",
+   "id": "9c496f62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9d6d09",
+   "id": "a5969af9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9955c7ea",
+   "id": "adc4724e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c233d3d",
+   "id": "05172306",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
