--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "86ed3c32",
+   "id": "581f68ef",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ed5a85",
+   "id": "59f6ac60",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,32 +27,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d7db456",
+   "id": "469f79f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer"
+    "!pip install -q data-designer \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd0ce7f",
+   "id": "080d0605",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
-    "import os\n",
-    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "import os\n",
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b3c71fba",
+   "id": "74a9ecdc",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -63,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a3cbe2",
+   "id": "85778bb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9678504c",
+   "id": "b60804b9",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -97,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b583355",
+   "id": "f695a80c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2510497",
+   "id": "b40cb3e3",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -123,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1616b279",
+   "id": "1d968e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea5fca4a",
+   "id": "8c067ce3",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -170,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b56cacd",
+   "id": "8dd6656a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7823592",
+   "id": "d7c45860",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -206,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "395a420c",
+   "id": "d94bdbac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f34cc8",
+   "id": "9c659516",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -243,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdc1f037",
+   "id": "035cdb74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae1ff751",
+   "id": "ba758579",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -369,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd831aa",
+   "id": "65a26ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9efe1e4",
+   "id": "6d35aaba",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -440,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "054ff544",
+   "id": "865ef8c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e33f6cba",
+   "id": "a5f3bdf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f896dbac",
+   "id": "a4a90d96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85e72e6e",
+   "id": "a517c11c",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -484,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "378d027e",
+   "id": "8944d6cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1442a6d",
+   "id": "f49329ea",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -507,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee71736",
+   "id": "08d7aff4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71364f16",
+   "id": "3094d4cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a57dff2",
+   "id": "ee48df3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd540227",
+   "id": "2a7356d7",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
