--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3fec7172",
+   "id": "fef37b50",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a00d147",
+   "id": "6a35705b",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,32 +27,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f02cd4e",
+   "id": "7cb8d485",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer"
+    "!pip install -q data-designer \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77a2c6e",
+   "id": "04f04275",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
-    "import os\n",
-    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "import os\n",
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "568cebb4",
+   "id": "3a43e9b2",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -63,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240cc94a",
+   "id": "bdc39109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae03b63c",
+   "id": "f53729bb",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -91,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56e14153",
+   "id": "4a59a0f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8edc3dd9",
+   "id": "95d5084d",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -117,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "843b1bf7",
+   "id": "87d40f27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08cffbb3",
+   "id": "19c68b1d",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -164,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76116f51",
+   "id": "524a6cf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b3b740",
+   "id": "2660d181",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -198,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "616811de",
+   "id": "8f494042",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71f13ab9",
+   "id": "38072683",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -233,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d2e7438",
+   "id": "27865737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb4eb347",
+   "id": "5a23deb5",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -340,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55ff2e7f",
+   "id": "ca24bc09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25ab9d95",
+   "id": "b5a965ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1e9b3a6",
+   "id": "425b63fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da16ff5a",
+   "id": "c6b326af",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -384,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82a12ed7",
+   "id": "0fdf5ec8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "297eb1aa",
+   "id": "b510cc12",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -407,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47c20a9d",
+   "id": "a1f86e26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "180e9cc2",
+   "id": "5e687b16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61a840d6",
+   "id": "550f90f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bfdafde",
+   "id": "2b4b28a5",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
