--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7a02425",
+   "id": "b4dc9a5b",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "048244cc",
+   "id": "412786ca",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d87b9fb3",
+   "id": "56484cd1",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,32 +36,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b04c6f2",
+   "id": "1138042c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer pillow"
+    "!pip install -q data-designer pillow\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "589de42d",
+   "id": "24fe27c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
-    "import os\n",
-    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "import os\n",
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65a793d7",
+   "id": "9157cc75",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -72,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df9164a4",
+   "id": "1ad5b4e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a9774fe",
+   "id": "04e25ed4",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -116,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bf4c5f8",
+   "id": "195fc878",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce1c435c",
+   "id": "0bb11458",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -142,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f966056",
+   "id": "12dcb08d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc91ea68",
+   "id": "91a381d1",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -180,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ae01dc",
+   "id": "df89f918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f05f2d3",
+   "id": "9c5aae47",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -206,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cd6c722",
+   "id": "b086e19d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5bedd8e",
+   "id": "11c74943",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fef568a",
+   "id": "dbe25614",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8293659d",
+   "id": "1118f9f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "515ef6c8",
+   "id": "9003a5f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f55543b",
+   "id": "02b1081b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3504fd38",
+   "id": "a27d5be9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7806a5d",
+   "id": "e235758f",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -365,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4172df5",
+   "id": "16c5296a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd1fc8bf",
+   "id": "fe76f3e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d106f727",
+   "id": "7c8eb9e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6f83fb6",
+   "id": "3d6ca462",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -409,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d69be80",
+   "id": "1510a8be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b995dce4",
+   "id": "942c22b2",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -430,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c157042b",
+   "id": "5bb55fc9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f29d990",
+   "id": "ab1f598c",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -467,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2625415e",
+   "id": "d81afa35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "595f64fa",
+   "id": "05929961",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "422a375d",
+   "id": "102ae3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8880d71e",
+   "id": "82453acd",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
